--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 } 
 </script>
 </head>
-<body >
-  <input type="button" onclick="mialerta();" value="Clic para ver"/>
-    
+<body>
+     
   <div class="title">
     <h1> Curriculum Vitae Goku Alias Kakarotto </h1>
     <div class="contenedor">
@@ -70,7 +69,7 @@
      <div class="titulos">
      <h2> Cualificaciones: </h2>
      </div>
-     <div class="textos"
+     <div class="textos">
      <ul>
        <li>	Inglés: Nivel Medio  </li>
        <li> Italiano: Nivel basico </li>
@@ -82,13 +81,13 @@
     <h3>Social Media - Contactar</h3>
     <div>
       <a href="mailto:goku@gmail.com"><img class="social" src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email"></a>
-      <a href="#"><img class="social" src="https://cdn-icons-png.flaticon.com/512/300/300221.png" alt="Google+"></a>
-      <a href="#"><img class="social" src="https://cdn-icons-png.flaticon.com/512/145/145807.png"  alt="LinkedIn"></a>
+      <a href="http://www.google.com.ar/Goku"><img class="social" src="https://cdn-icons-png.flaticon.com/512/300/300221.png" alt="Google+"></a>
+      <a href="http://ar.linkedin.com/Goku"><img class="social" src="https://cdn-icons-png.flaticon.com/512/145/145807.png"  alt="LinkedIn"></a>
     </div>
     <div>
       <a href="@goku"><img class="social" src="https://cdn-icons-png.flaticon.com/512/3670/3670151.png" alt="Twitter"></a>
       <a href="http://facebook.com/goku"><img class="social" src="https://cdn-icons-png.flaticon.com/512/5968/5968764.png" alt="Facebook"></a>
-      <a href="#"><img class="social" src="https://cdn-icons-png.flaticon.com/512/174/174881.png" alt="Wordpress"></a>
+      <a href="http://ar.worldpress.com/Goku"><img class="social" src="https://cdn-icons-png.flaticon.com/512/174/174881.png" alt="Wordpress"></a>
     </div>
   </div>
 
@@ -103,7 +102,7 @@
 
      </div>
 
-
+     <input type="button" onclick="mialerta();" value="Clic para ver"/>
 
 
 
